update create user api
