# account-microservice/api/accounts.py
@@ -1,31 +1,33 @@
 import os
 from flask_injector import inject
 from providers.MongoProvider import MongoProvider
+from providers.UserProvider import UserProvider
 
 data_provider = MongoProvider()
+user_provider = UserProvider()
+
 
 @inject
-def create_user(SteamUser):
-    return data_provider.create_user(SteamUser)
+def create_user(steamUser):
+    return user_provider.create_user(steamUser)
 
 @inject
-def read_user(user_id):
-    print(user_id)
-    user = data_provider.read_user(user_id)
-    print(user)
-    return data_provider.read_user(user_id)
+def read_game_by_title(gameTitle):
+    game = data_provider.read_game_by_title(gameTitle)
+    print(game)
+    return data_provider.read_game_by_title(gameTitle)
 
 @inject
 def read_all_games():
     return data_provider.read_all_games()
 
-@inject
-def update_user(user_payload):
-    return data_provider.update_user(user_payload)
+# @inject
+# def update_user(user_payload):
+#     return data_provider.update_user(user_payload)
 
-@inject
-def delete_user(user_id):
-    return data_provider.delete_user(user_id)
+# @inject
+# def delete_user(user_id):
+#     return data_provider.delete_user(user_id)
 
 
 def basic_auth(username, password, required_scopes=None):
